<resources>
    <string name="app_name">RoomRent</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="sign_in_with_goole">LOG IN WITH GOOGLE</string>
    <string name="sign_up_with_goole">SIGN UP WITH GOOGLE</string>
    <string name="sign_in_with_facebook">LOG IN WITH FACEBOOK</string>
    <string name="sign_up_with_facebook">SIGN UP WITH FACEBOOK</string>
    <string name="sign_in_with_twitter">LOG IN WITH TWITTER</string>
    <string name="sign_up_with_twitter">SIGN UP WITH TWITTER</string>
    <string name="or_sign_in_with">OR LOG IN WITH EMAIL</string>
    <string name="or_sign_up_with">OR SIGN UP WITH EMAIL</string>
    <string name="email_hint">Email address</string>
    <string name="username_hint">User name</string>
    <string name="password_hint">Your password</string>
    <string name="remember_me">Remember</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in_with_email">LOG IN</string>
    <string name="sign_up_with_email">CReate New Account</string>
    <string name="welcome_text">Login to Rent Room</string>
    <string name="back_to_sign_in_with_email">Back to Sign in</string>
    <string name="welcome_text_sign_up">Sign up to Rent Room App</string>
    <string name="title_activity_drawer">Welcome Room Rental</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">username@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
