<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.LoginActivity"
        android:orientation="vertical"
        android:background="@color/colorSignin">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:padding="10dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_text_sign_up"
                    android:padding="10dp"
                    android:textColor="@color/colorBlack"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:padding="10dp"
                        android:background="@color/colorFacebook"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/sign_up_with_facebook"
                        android:id="@+id/facebook_sign_up"
                        android:drawableLeft="@mipmap/facebook"
                        android:layout_marginBottom="2dp"/>
            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:layout_marginBottom="10dp">-->
                <!--<Button-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="45dp"-->
                        <!--android:padding="10dp"-->
                        <!--android:background="@color/colorTwitter"-->
                        <!--android:textColor="@color/colorWhite"-->
                        <!--android:textStyle="bold"-->
                        <!--android:text="@string/sign_up_with_twitter"-->
                        <!--android:id="@+id/twitter_login"-->
                        <!--android:drawableLeft="@mipmap/twitter"-->
                        <!--android:layout_marginBottom="2dp"/>-->
            <!--</android.support.v7.widget.CardView>-->
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:padding="10dp"
                        android:background="@color/colorTwitter"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/sign_up_with_goole"
                        android:id="@+id/google_sign_up"
                        android:drawableLeft="@mipmap/google48"
                        android:layout_marginBottom="2dp"/>
            </android.support.v7.widget.CardView>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textStyle="bold|italic"
                        android:textColor="@color/colorBlack"
                        android:padding="5dp"
                        android:text="@string/or_sign_up_with"/>

            </LinearLayout>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                <EditText
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@null"
                        android:textColor="@color/colorBlack"
                        android:hint="@string/username_hint"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                <EditText
                        android:id="@+id/txt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:background="@null"
                        android:textColor="@color/colorBlack"
                        android:hint="@string/email_hint"/>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">
                <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textColor="@color/colorBlack"
                        android:background="@null"
                        android:hint="@string/password_hint"/>
            </android.support.v7.widget.CardView>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorFacebook"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/sign_up_with_email"
                    android:id="@+id/email_sign_up"
            />
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/colorTwitter"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/back_to_sign_in_with_email"
                    android:id="@+id/back_email_login"
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>