<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.LoginActivity"
        android:orientation="vertical"
        android:background="@color/colorSignin">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="10dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_text"
                        android:padding="10dp"
                        android:textColor="@color/colorFacebook"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="20dp"/>
                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:padding="10dp"
                            android:background="@color/colorFacebook"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:text="@string/sign_in_with_facebook"
                            android:id="@+id/facebook_login"
                            android:drawableLeft="@mipmap/facebook"
                            android:layout_marginBottom="2dp"/>
                </android.support.v7.widget.CardView>

                <!--<android.support.v7.widget.CardView-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="10dp"-->
                        <!--android:layout_marginBottom="10dp">-->
                    <!--<Button-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="45dp"-->
                            <!--android:padding="10dp"-->
                            <!--android:background="@color/colorTwitter"-->
                            <!--android:textColor="@color/colorWhite"-->
                            <!--android:textStyle="bold"-->
                            <!--android:text="@string/sign_in_with_twitter"-->
                            <!--android:id="@+id/twitter_login"-->
                            <!--android:drawableLeft="@mipmap/twitter"-->
                            <!--android:layout_marginBottom="2dp"/>-->
                <!--</android.support.v7.widget.CardView>-->
                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    <Button
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:padding="10dp"
                            android:background="@color/colorTwitter"
                            android:textColor="@color/colorWhite"
                            android:textStyle="bold"
                            android:text="@string/sign_in_with_goole"
                            android:id="@+id/google_login"
                            android:drawableLeft="@mipmap/google48"
                            android:layout_marginBottom="2dp"/>
                </android.support.v7.widget.CardView>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="10dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textStyle="bold|italic"
                            android:textColor="@color/colorBlack"
                            android:padding="5dp"
                            android:text="@string/or_sign_in_with"/>

                </LinearLayout>

                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    <EditText
                            android:id="@+id/txt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:focusable="auto"
                            android:background="@null"
                            android:textColor="@color/colorBlack"
                            android:hint="@string/email_hint"/>
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    <EditText
                            android:id="@+id/txt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@null"
                            android:textColor="@color/colorBlack"
                            android:hint="@string/password_hint"/>
                </android.support.v7.widget.CardView>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                    <CheckBox
                            android:id="@+id/chk_remember_me"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/remember_me"
                            android:textAlignment="inherit"
                            android:gravity="left"
                            android:textColor="@color/colorBlack"
                            android:layout_weight="1"/>
                    <TextView
                            android:id="@+id/lbl_forget_password"
                            android:text="@string/forget_password"
                            android:textColor="@color/colorBlack"
                            android:layout_width="match_parent"
                            android:gravity="right"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                </LinearLayout>
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:background="@color/colorTwitter"
                        android:textColor="@color/colorWhite"
                        android:textStyle="bold"
                        android:text="@string/sign_in_with_email"
                        android:id="@+id/email_login"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:background="@color/colorFacebook"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:text="@string/sign_up_with_email"
                    android:id="@+id/go_sign_up"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>

</LinearLayout>